[package]
name = "letty"
version = "0.1.0"
authors = ["Daiderd Jordan <daiderd@gmail.com>"]
edition = "2018"

[[bin]]
name = "letty-blink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-foundation = "0.6.0"
core-foundation-sys = "0.6.0"
io-kit-sys = "0.1.0"
mach = "0.2"
